# SFMLGameEngine

./: .gitignore  CMakeLists.txt  ParentChild.hpp  Player.hpp  README.md  Scenes.hpp  StressTest.hpp  TestGame.cpp  TestGame.h  TestGame.hpp  TestObj.hpp  Troop.hpp  main.cpp
Example/: CollisionTest.hpp  ParentChild.hpp  Player.hpp  StressTest.hpp  TestGame.cpp  TestGame.h  Troop.hpp  main.cpp
Game/: Child.cpp  Game.cpp  Game.h  Logger.cpp  Logger.h  Object.cpp  Object.h  Parent.cpp  Scene.cpp  Scene.h  TimeManager.cpp  TimeManager.h
